--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jspdf": "^3.0.4",
     "lucide-react": "^0.562.0",
     "papaparse": "^5.5.3",
+    "pdfjs-dist": "^5.4.530",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "recharts": "^3.7.0",
