feat: refine dashboard layout, remove sticky header, and implement multi-country support

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@supabase/supabase-js": "^2.91.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "i18next": "^25.8.0",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.562.0",
     "papaparse": "^5.5.3",
     "pdfjs-dist": "^5.4.530",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.4",
     "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
