feat: display actual working hours in job section

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,40 @@ dist-ssr
 *.sw?
 .vercel
 .env
+
+# AI Agent & IDE directories
+.gemini/
+.cursor/
+.cline/
+.windsurf/
+.continue/
+.agent/
+.agents/
+.augment/
+.claude/
+.codebuddy/
+.codex/
+.commandcode/
+.crush/
+.factory/
+.goose/
+.junie/
+.kilocode/
+.kiro/
+.kode/
+.mcpjam/
+.mux/
+.neovate/
+.openclaude/
+.opencode/
+.openhands/
+.pi/
+.pochi/
+.qoder/
+.qwen/
+.roo/
+.trae/
+.vibe/
+.zencoder/
+skills/
+.adal/
